syntax = "proto3";

package vco.schemas;

message TranscriptEntry {
  uint64 start_ms = 1;
  uint64 end_ms = 2;
  string text = 3;
  string speaker = 4;
}

message Transcript {
  string schema = 1;
  bytes media_manifest_cid = 2;
  repeated TranscriptEntry entries = 3;
  string language = 4; // ISO 639-1
}
